# frontier

./: .gitignore  README.md  config.yaml  pyproject.toml
data/: frontier.db
datasets/ground_truth/: A700_door_schedule.yaml  _schema.yaml  example.yaml
datasets/ground_truth/json/: A701_door_schedule.json  A711_finish_schedule.json  K680_schedule_claude.json  K680_schedule_claude_raw.json
docs/: CHANGELOG.md  WORK_TRACKING.md
docs/milestones/: M001_benchmark-platform_todo.md  M002_document-management_todo.md  M003_ground-truth-editor_todo.md  M004_model-runners_todo.md  M005_results-dashboard_todo.md  M006_annotations-export_todo.md  M007_rss-feeds-settings_todo.md
docs/specs/: M001_benchmark-platform_prd.md
prompts/: default.txt
prototypes/: comparison.html  dashboard.html  document-detail.html  documents.html  ground-truth-editor.html  models.html  news.html  prompt-lab.html  results.html  run-detail.html  run-evaluation.html  trends.html
src/frontier/: __init__.py  app.py  cli.py  database.py  evaluation.py  rss.py  table_evaluation.py
src/frontier/models/: document.py  table_gt.py  task.py
src/frontier/routes/: comparison.py  dashboard.py  documents.py  evaluate.py  ground_truth.py  models_page.py  news.py  prompts.py  results.py  settings.py  table_eval.py  table_gt.py
src/frontier/runners/: anthropic_runner.py  base.py  openai_runner.py
src/frontier/static/: upload_test.html
src/frontier/templates/: base.html  comparison.html  dashboard.html  news.html  (+18 more)
tests/: test_app.py  test_database.py  test_evaluation.py  test_rss.py  test_table_eval.py  test_table_gt.py  test_tasks.py
(+2 files in other folders)
