[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frontier"
version = "0.1.0"
description = "Benchmark suite for evaluating AI model capabilities on construction documents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pymupdf>=1.25.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
frontier = "frontier.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
